--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node dist/app.cjs",
+    "start": "node dist/app.js",
     "dev": "nodemon src/app.ts"
   },
   "keywords": [],
